# mfqe

./: .gitignore  Cargo.toml  README.md  mfqe.yml
.github/workflows/: test-mfqe.yml
src/: main.rs
tests/: test_cmdline.rs
tests/data/: 1.fq  a.fasta  input1  input1_with_empty  input2
