[package]
name = "mfqe"
version = "0.5.0"
authors = ["Ben J Woodcroft <donttrustben@gmail.com>"]
license = "GPL-3.0"
description = "FASTA/Q read extractor"
homepage = "https://github.com/wwood/mfqe"
repository = "https://github.com/wwood/mfqe"
documentation = "https://github.com/wwood/mfqe"
readme = "README.md"

[dependencies]
seq_io = "0.3.*"
clap = "2.*"
log = "0.4.*"
env_logger = "0.7.*"
flate2 = "1.0.*"

[dev-dependencies]
assert_cli = "0.6.*"
tempfile = "3.1.*"